<resources>
    <string name="app_name">Pachyderm</string>
    <string name="app_versionNumber">1.1</string>
    <string name="app_lastModified">Last Modified on November 18, 2018</string>
    <string name="app_homepage">"https://www.lucschulz.ca/"</string>
    <string name="app_webSitePretty">www.lucschulz.ca</string>

    <string name="todo">Todo</string>
    <string name="add_item">Add</string>
    <string name="name">Enter text here</string>
    <string name="enter_text_here">Enter text here</string>
    <string name="cleartasks">Clear Tasks</string>
    <string name="clear_items">Clear</string>
    <string name="date_added">Date Added</string>
    <string name="due_date">Due Date</string>
    <string name="due_time">Due Time</string>
    <string name="set_due_date">Set Due Date</string>
    <string name="enter_text_string_enter_text_here">Task description</string>
    <string name="refresh">Refresh</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="pachyderm_1_0">Pachyderm 1.0</string>
    <string name="updated_on_october_7_2018">October 7, 2018</string>
    <string name="by_luc_schulz">by Luc Schulz</string>
    <string name="creative_minds_logo">Creative Minds Logo</string>
    <string name="www_lucschulz_ca">www.lucschulz.ca</string>
    <string name="application_logo">Application logo.</string>

    <!-- TOAST -->
    <string name="toastItemAdded">Item added.</string>
    <string name="toastEnterTaskDescription">Please enter a task description.</string>
    <string name="toastTaskListCleared">Task list cleared.</string>
    <string name="tvPlus">+</string>


    <!-- KEYS -->
    <string name="keyTaskID">TaskID</string>
    <string name="task_description">Task Description</string>
    <string name="notes">Notes</string>
    <string name="save">Save</string>

    <!-- NOTIFICATIONS -->
    <string name="notif_ChannelName">Pachyderm Notifications</string>
    <string name="notif_ChannelDescription">This is a notification.</string>
</resources>
