<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_individual_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:padding="8dp" >

    <CheckBox
        android:id="@+id/cbCompleted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:checked="false" />

    <TextView
        android:id="@+id/tvTaskId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/taskItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="32sp"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/layout_dates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/taskItem"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_date_headers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dateAdded_title"
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32sp"
                android:layout_weight="1"
                android:text="@string/date_added"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/dateDue_title"
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32sp"
                android:layout_weight="1"
                android:text="@string/due_date"
                android:textColor="@android:color/black"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_date_output"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item_dateAdded"
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32sp"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/item_dateDue"
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32sp"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/itmPlus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvTaskId"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="-11dp"
        android:text="@string/tvPlus"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp" />

</RelativeLayout>